refactor(Controller, Utils): 중간 변수 없이 바로 객체를 반환하도록 리팩토링